Update completed program

--- a/On The Map/Assets/Base.lproj/LaunchScreen.storyboard
+++ b/On The Map/Assets/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,17 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="AppIcon" translatesAutoresizingMaskIntoConstraints="NO" id="47q-Lq-yMG">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon" translatesAutoresizingMaskIntoConstraints="NO" id="47q-Lq-yMG">
                                 <rect key="frame" x="137" y="283" width="100" height="100"/>
                                 <color key="backgroundColor" red="0.003010978457" green="0.70323187109999996" blue="0.89525973800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.003010978457" green="0.70323187109999996" blue="0.89525973800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="47q-Lq-yMG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="112" id="40u-iT-Ng2"/>
-                            <constraint firstItem="47q-Lq-yMG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="238" id="dgy-CG-in6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="47q-Lq-yMG" secondAttribute="trailing" constant="113" id="lgv-D4-ojn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="47q-Lq-yMG" secondAttribute="bottom" constant="259" id="uva-KX-bHp"/>
+                            <constraint firstItem="47q-Lq-yMG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="29x-Gu-Ku0"/>
+                            <constraint firstItem="47q-Lq-yMG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="263" id="Igl-AR-J2z"/>
+                            <constraint firstItem="47q-Lq-yMG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="U3M-fJ-7fz"/>
+                            <constraint firstItem="47q-Lq-yMG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bnR-mh-qO4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
